# tx_ws

./: README.md  readme
src/realsense_ros_gazebo/sdf/D435i/: model.sdf
src/uav/: CMakeLists.txt  package.xml
src/uav/config/: joint_names_uav.yaml
src/uav/launch/: iris_3d.launch  uav.launch
src/uav/models/3d_lidar/: 3d_lidar.sdf  model.config
src/uav/models/D435i/: D435i.sdf  model.config
src/uav/models/Mid360/: Mid360.sdf
src/uav/models/imu_gazebo/: imu_gazebo.sdf  model.config
src/uav/models/iris_3d_lidar/: iris_3d_lidar.sdf  model.config
src/uav/models/livox_avia/: iris_livox_avia.sdf  livox_avia.sdf
src/uav/models/livox_mid40/: model.config
src/uav/models/simple_cardboard_box/: model.config  model.sdf
src/uav/models/stereo_camera/: model.config  model.sdf
src/uav/models/three_layer_shelf/: model.config  model.sdf
src/uav/models/uav/: model.config  uav.sdf
src/uav/models/uav/meshes/: base_link.STL  camera_link.STL  lidar_link.STL  propeller_1_link.STL  propeller_2_link.STL  propeller_3_link.STL  propeller_4_link.STL
src/uav/rviz/: uav.rviz
src/uav/scripts/: circle_traj.py  figure8.py  imu_monitor.py  takeoff.py
src/uav/urdf/: uav.csv  uav.urdf  uav_orgin.sdf
src/uav/worlds/: warehouse_spaced_boxes.world  world.world
